# arbitrary_code_highlighter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/ach/: color_options.hpp  core.cpp  core.hpp  errors.hpp  text_extractor.cpp  text_extractor.hpp  text_location.hpp  version.hpp
src/ach/ansi/: core.cpp  core.hpp
src/ach/ansi/detail/: ansi_tokenizer.cpp  ansi_tokenizer.hpp
src/ach/cc/: color_options.hpp  core.cpp  core.hpp  errors.hpp
src/ach/cc/detail/: code_tokenizer.hpp  color_token.hpp  color_tokenizer.cpp  color_tokenizer.hpp
src/ach/ce/: core.cpp  core.hpp  css_class_names.hpp
src/ach/ce/detail/: gcc_tokenizer.cpp  gcc_tokenizer.hpp
src/ach/clangd/: code_token.hpp  code_tokenizer.cpp  code_tokenizer.hpp  core.cpp  core.hpp  highlighter_error.hpp  semantic_token.hpp  splice_utils.hpp  spliced_text_iterator.hpp  spliced_text_parser.cpp  spliced_text_parser.hpp  state.hpp
src/ach/common/: html_builder.cpp  html_builder.hpp  html_types.hpp  options.hpp  text_extractor.cpp  text_extractor.hpp  text_location.cpp  text_location.hpp
src/ach/detail/: code_tokenizer.hpp  color_token.hpp  color_tokenizer.cpp  color_tokenizer.hpp  html_builder.cpp  html_builder.hpp  html_types.hpp  text_utils.hpp
src/ach/mirror/: code_tokenizer.hpp  color_options.hpp  color_token.hpp  color_tokenizer.cpp  color_tokenizer.hpp  core.cpp  core.hpp  errors.hpp
src/ach/text/: extractor.cpp  extractor.hpp  location.hpp  types.hpp  utils.hpp
src/ach/utility/: algorithm.hpp  enum.hpp  functional.hpp  range.hpp  text.hpp  type_traits.hpp  version.hpp  visitor.hpp
src/ach/web/: html_builder.cpp  html_builder.hpp  types.hpp
src/cli/: CMakeLists.txt  parse_args.cpp
src/lib/: CMakeLists.txt  code_tokenizer.hpp  color_token.hpp  color_tokenizer.cpp  color_tokenizer.hpp  core.cpp  core.hpp  html_builder.cpp  html_builder.hpp  html_types.hpp  text_extractor.cpp  text_extractor.hpp  text_location.hpp  text_utils.hpp  utility.hpp  version.hpp
src/python/: CMakeLists.txt  binding.cpp
src/test/: CMakeLists.txt  algorithm_tests.cpp  cc_highlighter_tests.cpp  clangd_common.hpp  code_tokenizer_tests.cpp  find_matching_tokens_tests.cpp  highlighter_tests.cpp  main.cpp  mirror_tests.cpp  semantic_tokens_tests.cpp  splice_tests.cpp  text_extractor_tests.cpp
